# hipertexto

./: README.md  pyproject.toml
.woodpecker/: ci.yml  lint.yml  test.yml
hipertexto/: console.py  generators.py  images.py  jinja_globals.py  local_server.py  main.py  process_md.py
hipertexto/commands/: __init__.py  _build.py  _init.py  _serve.py  build.py  init.py  serve.py
tests/: conftest.py  test_cli.py  test_server.py
tests/assets/sample_project_with_public/content/: _index.md
tests/assets/sample_project_with_public/content/inner/: other.md
tests/assets/sample_project_with_public/templates/: index.html  other.html
