[project]
name = "hipertexto"
version = "0.1.0"
description = ""
authors = [
    { name = "Thiago Campos", email = "commit@thigcampos.com" },
    { name = "Ivan Santiago", email = "ivansantiago.junior@gmail.com" },
]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "jinja2>=3.1.6",
    "markdown>=3.10",
    "python-frontmatter>=1.1.0",
    "toml>=0.10.2",
    "cyclopts>=4.3.0",
    "watchfiles>=1.1.1",
]

[project.scripts]
ht = "hipertexto.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "taskipy>=1.14.1",
    "ruff>=0.14.6",
    "mypy>=1.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
exclude = "tests"

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['PLR0913', 'PLR0917']

[tool.ruff.lint.isort]
default-section = "third-party"

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
pre_test = 'task lint'
test = 'pytest -s -x --cov=hipertexto -vv'
post_test = 'coverage html'
mypy = "mypy ."
